<resources>
    <string name="app_name">Flipkart</string>
    <string name="Flipkart">Flipkart</string>
    <string name="sendOTP">Send OTP</string>
    <string name="verify">Verify</string>
    <string name="enterOTP">Please Enter OTP we\'ve sent you on</string>
    <string name="Logintogetstarted">Log in to get started</string>
    <string name="ExperiencetheallnewFlipkart">Experience the all new Flipkart</string>

    <!--    For Select Language Page-->
    <string name="welcome">Welcome</string>
    <string name="Continue">Continue</string>
    <string name="choose_language">Choose Language</string>
    <string name="coming_soon_languages">These languages are coming soon</string>
    <string name="selectLangText">Now you can use Filpkart in mupliple languages</string>
    <!--    Language name in english-->
    <string name="hindi">Hindi</string>
    <string name="telugu">Telugu</string>
    <string name="tamil">Tamil</string>
    <string name="marathi">Marathi</string>
    <string name="kannada">Kannada</string>
    <string name="english">English</string>
    <string name="bengali">Bangla</string>
    <!--    Language name in local-->
    <string name="hindi_local">हिन्दी</string>
    <string name="telugu_local">తెలుగు</string>
    <string name="tamil_local">தமிழ்</string>
    <string name="marathi_local">मराठी</string>
    <string name="bengali_local">বাংলা</string>
    <string name="kannada_local">ಕನ್ನಡ</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="FlipkartPlusZone">Flipkart Plus Zone</string>
    <string name="AllCategories">All Categories</string>
    <string name="moreonflipkart">More on Flipkart</string>

    <string name="legal">Legal</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="help_centre">Help Centre</string>
    <string name="notifications_preferences">Notifications Preferences</string>
    <string name="my_chats">My Chats</string>
    <string name="my_notification">My Notification</string>
    <string name="my_account">My Account</string>
    <string name="my_wishlist">My Wishlist</string>
    <string name="my_carts">My Carts</string>
    <string name="my_coupons">My Coupons</string>
    <string name="my_orders">My Orders</string>
    <string name="sell_on_flipkart">Sell On Flipkart</string>
    <string name="offer_zone">Offer Zone</string>
    <string name="more_on_flipkart">More on Flipkart</string>
    <string name="all_categories">All Categories</string>
    <string name="flipkart_plus_zone">Flipkart Plus Zone</string>
    <string name="title_activity_home_screen_nav">HomeScreenNav</string>
    <string name="notification">Notification</string>
    <string name="claim_exclusive_rewards_from_our_partners">Claim Exclusive Rewards From our Partners</string>
    <string name="games">Games</string>
    <string name="videos">Videos</string>
    <string name="credits">Credits</string>
    <string name="insurance">Insurance</string>
    <string name="idea">idea</string>
    <string name="home">Home</string>
    <string name="search_for_products_brands_and_more">Search for Products,Brands and More</string>
    <string name="trending_offers">Trending Offers</string>
    <string name="viewAll">View All</string>
    <string name="email">Email</string>
    <string name="title_activity_buy_now">BuyNow</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
</resources>