<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/fragment_first">

    <fragment
        android:id="@+id/fragment_first"
        android:name="com.nero.flipkart.Fragments.Home.HomeFragment"
        android:label=""
        tools:layout="@layout/fragment_first" />

    <fragment
        android:id="@+id/nav_FlipkartPlusZone"
        android:name="com.nero.flipkart.Fragments.NavigationDrawer.FlipkartPlusZone.FlipkartPlusZoneFragment"
        android:label=""
        tools:layout="@layout/fragment_flipkart_plus_zone" />

    <fragment
        android:id="@+id/nav_AllCategories"
        android:name="com.nero.flipkart.Fragments.NavigationDrawer.AllCategories.AllCategoriesFragment"
        android:label="@string/AllCategories"
        tools:layout="@layout/fragment_all_categories" />

    <fragment
        android:id="@+id/nav_moreOnFlipkart"
        android:name="com.nero.flipkart.Fragments.NavigationDrawer.MoreOnFlipkart.MoreOnFlipkartFragment"
        android:label="@string/moreonflipkart"
        tools:layout="@layout/fragment_more_on_flipkart" />
    <fragment
        android:id="@+id/nav_ChooseLanguage"
        android:name="com.nero.flipkart.Fragments.NavigationDrawer.ChooseLanguage.ChooseLanguageFragment"
        android:label="@string/choose_language"
        tools:layout="@layout/fragment_choose_language" />
    <fragment
        android:id="@+id/nav_offerZone"
        android:name="com.nero.flipkart.Fragments.NavigationDrawer.OfferZone.OfferZoneFragment"
        android:label="@string/offer_zone"
        tools:layout="@layout/fragment_offer_zone" />

</navigation>